--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "@supabase/supabase-js": "^2.75.1",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.24",
