--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hashgraph/sdk": "^2.76.0",
     "@phosphor-icons/react": "^2.1.10",
     "@supabase/supabase-js": "^2.75.1",
+    "@thirdweb-dev/sdk": "^4.0.99",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.24",
     "next": "15.5.6",
