--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hashgraph/sdk": "^2.76.0",
+    "@langchain/core": "^1.0.3",
+    "@langchain/langgraph": "^1.0.1",
+    "@langchain/openai": "^1.0.0",
     "@phosphor-icons/react": "^2.1.10",
     "@supabase/supabase-js": "^2.75.1",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.24",
+    "langchain": "^1.0.3",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
