--- a/env.example
+++ b/env.example
@@ -14,6 +14,7 @@ NEXT_PUBLIC_THIRDWEB_SECRET_KEY=
 # Unreal
 NEXT_PUBLIC_UNREAL_OPENAI_ADDRESS=
 NEXT_PUBLIC_UNREAL_CALLS_INITIAL=
+NEXT_PUBLIC_UNREAL_WELCOME_TOKENS=
 NEXT_PUBLIC_UNREAL_EXPIRY_SECONDS=
 UNREAL_API_URL=
 
