Implemented abort chat completion

--- a/env.example
+++ b/env.example
@@ -16,7 +16,7 @@ NEXT_PUBLIC_UNREAL_OPENAI_ADDRESS=
 NEXT_PUBLIC_UNREAL_CALLS_INITIAL=
 NEXT_PUBLIC_UNREAL_WELCOME_TOKENS=
 NEXT_PUBLIC_UNREAL_EXPIRY_SECONDS=
-UNREAL_API_URL=
+NEXT_PUBLIC_UNREAL_API_URL=
 
 # Treasury wallet
 TREASURY_PRIVATE_KEY=
