--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.75.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
