--- a/env.example
+++ b/env.example
@@ -20,4 +20,4 @@ NEXT_PUBLIC_UNREAL_API_URL=
 NEXT_PUBLIC_MAX_API_KEYS=
 
 # Treasury wallet
-TREASURY_PRIVATE_KEY=
+NEXT_PUBLIC_TREASURY_PRIVATE_KEY=
